syntax = "proto3";

package p2p;

service P2P {
    rpc InitSecret         (InitSecretRequest)         returns (InitSecretResponse)         {}
    rpc BroadcastAll       (BroadcastAllRequest)       returns (BroadcastAllResponse)       {}
    rpc GenerateShares     (GenerateSharesRequest)     returns (GenerateSharesResponse)     {}
    rpc CheckWallet        (CheckWalletRequest)        returns (CheckWalletResponse)        {}
    rpc BroadcastAssignKey (BroadcastAssignKeyRequest) returns (BroadcastAssignKeyResponse) {}
    rpc AddReceivedShare   (AddReceivedShareRequest)   returns (AddReceivedShareResponse)   {}
    rpc DeriveSharedSecret (DeriveSharedSecretRequest) returns (DeriveSharedSecretResponse) {}
    rpc StoreWalletInfo    (StoreWalletInfoRequest)    returns (StoreWalletInfoResponse)    {}
}

message CheckWalletRequest {
    string email = 1;
}

message CheckWalletResponse {
    string pub_key = 1;
    string address = 2;
}

message BroadcastAllRequest {}

message BroadcastAllResponse {}

message BroadcastAssignKeyRequest {
    uint32 id = 1;
}

message BroadcastAssignKeyResponse {
    uint32 id   = 1;
    string name = 2;
}

message InitSecretRequest {
    string owner = 1;
}

message InitSecretResponse {
    string pub_key = 1;
}

message AddReceivedShareRequest {
    string owner          = 1;
    string received_share = 2;
}

message AddReceivedShareResponse {
    bool status = 1;
}

message GenerateSharesRequest {
    string owner = 1;
}

message GenerateSharesResponse {
    bool status = 1;
}

message DeriveSharedSecretRequest {
    string owner = 1;
}

message DeriveSharedSecretResponse {
    bool status = 1;
}

message StoreWalletInfoRequest {
    string owner      = 1;
    string pub_key = 2;
    string address    = 3;
}

message StoreWalletInfoResponse {
    bool status = 1;
}